feat: Add initial DEX frontend UI.

--- a/dex/index.html
+++ b/dex/index.html
@@ -4048,7 +4048,7 @@
           user_address: userAddress,
           amount_wei: amountWeiBN.toString(),
           token_contract: tokenContract,
-          blockchain_id: selectedChainConfig.blockchainId
+          blockchain_id: chainConfig.blockchainId
         };
 
         let payload;
